--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    # Run at UTC 13:25 on Tue-Fri 
+    - cron '25 13 * * 2,3,4,5'
 
   workflow_dispatch:
 
@@ -27,5 +30,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          destination_dir: ./public
+          publish_dir: ./docs
+          destination_dir: ./docs
