Try to get scheduling to work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,13 @@ name: Generate Covid-19 incidence graphs
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - master
+
+  schedule:
+    - cron: '25 13 * * 2,3,4,5'
 
   workflow_dispatch:
-
 
 jobs:
   build:
