Revert "Don't run on schedule. Only for test"
This reverts commit 661379f8be4aff1d77d1abef963e78a39ee2ca15.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    - cron: '25 13 * * 2,3,4,5'
   workflow_dispatch:
 
 jobs:
